@@ -64,8 +64,10 @@ The Red Hat OpenShift with NetApp solution is designed to logically separate net
 |Management for bare metal nodes and IPMI
 |16
 |Bare Metal Network
+|Network for OpenShift services once cluster is available
 |181
 |Provisioning Network
+|Network for PXE boot and installation of bare metal nodes via IPI
 |3485
 |===
 
