@@ -18,11 +18,10 @@ summary:
 // 2020-06-25 14:31:33.563897
 //
 
-
-
-
+[.lead]
 NetApp Trident is an open-source and fully-supported storage orchestrator for containers and Kubernetes distributions, including Red Hat OpenShift.
-It works with the entire NetApp storage portfolio, including the NetApp ONTAP and Element storage systems, and supports NFS and iSCSI connections.
+
+Trident works with the entire NetApp storage portfolio, including the NetApp ONTAP and Element storage systems, and supports NFS and iSCSI connections.
 Trident provides the ability to accelerate the DevOps workflow by allowing end users to provision and manage storage from their NetApp storage systems, without requiring intervention from a storage administrator.
 An administrator can configure a number of storage backends based on project needs, and storage system models that allow for any number of advanced storage features, such as: compression, specific disk types, or QoS levels that guarantee a certain performance. After they are defined, these backends can be leveraged by developers as part of their projects to create persistent volume claims (PVCs) and attach persistent storage to their containers on demand.
 
