@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: containers/rh-os-n_use_case_multitenancy_architecture.html
 keywords: OpenShift, OCP, NetApp Trident, NetApp ONTAP, Red Hat OpenShift, Multitenancy, Multi-tenancy
-summary: Multi-tenancy on Red Hat OpenShift with NetApp Trident backed by NetApp ONTAP
+summary: Configuring Multitenancy on Red Hat OpenShift with NetApp
 ---
 
 = Architecture
