@@ -2,12 +2,11 @@
 sidebar: sidebar
 permalink: containers/rh-os-n_use_case_multitenancy_overview.html
 keywords: OpenShift, OCP, NetApp Trident, NetApp ONTAP, Red Hat OpenShift, Multitenancy, Multi-tenancy
-summary: Overview of Multi-tenancy on Red Hat OpenShift with NetApp Trident backed by NetApp ONTAP
+summary: Configuring Multitenancy on Red Hat OpenShift with NetApp
 ---
 
-= Multi-tenancy on Red Hat OpenShift with NetApp Trident backed by NetApp ONTAP
+= Configuring Multitenancy on Red Hat OpenShift with NetApp: Red Hat OpenShift with NetApp
 
-Alan Cowles & Nikhil M Kulkarni, NetApp
 
 :hardbreaks:
 :nofooter:
