@@ -2,7 +2,7 @@
 sidebar: sidebar
 permalink: containers/rh-os-n_use_case_multitenancy_validation.html
 keywords: OpenShift, OCP, NetApp Trident, NetApp ONTAP, Red Hat OpenShift, Multitenancy, Multi-tenancy
-summary: Configuring Multi-tenancy on Red Hat OpenShift with NetApp ONTAP
+summary: Configuring Multitenancy on Red Hat OpenShift with NetApp
 ---
 
 = Validation
