@@ -100,10 +100,10 @@ entries:
               url: /containers/rh-os-n_use_case_multitenancy_cluster_admin_tasks.html
             - title: Storage Administrator Tasks
               url: /containers/rh-os-n_use_case_multitenancy_storage_admin_tasks.html
-        - title: Validation
-          url: /containers/rh-os-n_use_case_multitenancy_validation.html
-        - title: Scaling
-          url: /containers/rh-os-n_use_case_multitenancy_scaling.html
+          - title: Validation
+            url: /containers/rh-os-n_use_case_multitenancy_validation.html
+          - title: Scaling
+            url: /containers/rh-os-n_use_case_multitenancy_scaling.html
     - title: Videos / Demos
       url: /containers/rh-os-n_videos_and_demos.html
     - title: Additional Information
