@@ -19,6 +19,11 @@ Recent changes to the NetApp Solutions collateral.  The most recent changes are 
 [width=100%,cols="2, 4, 10",grid="all"]
 |===
 | *Date* | *Solution Area* | *Description of change*
+| 05/12/2021 | Containers Solutions | Added new solution Red Hat OpenShift with NetApp, re-organized sidebar.
+| 05/10/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 3
+| 05/05/2021 | Enterprise Database | Added FlexPod Oracle NVA (1155) and Automation video
+| 05/03/2021 | Desktop Virtualization | Added link to FlexPod Desktop Virtualization solutions
+| 04/30/2021 | VMware Virtualization | Video: How to use vVols with NetApp and VMware Tanzu Basic, part 2
 | 04/26/2021 | Hybrid Cloud Blogs | Added blog: Using VMware Tanzu with ONTAP to accelerate your Kubernetes journey
 | 04/06/2021 | NetApp Solutions | Added "About this Repository"
 | 03/31/2021 | AI Use Cases | Added TR-4886: AI Inferencing at the Edge: NetApp ONTAP with Lenovo ThinkSystem Solution Design
